@@ -2,6 +2,7 @@ package com.github.vovten.eventflow.transport.incoming;
 
 import com.github.vovten.eventflow.event.AbstractTraceableEvent;
 import com.github.vovten.eventflow.event.Event;
+import com.github.vovten.eventflow.serialization.EventSerializerFactory;
 import com.github.vovten.eventflow.serialization.json.JsonEventSerializer;
 import com.github.vovten.eventflow.serialization.msgpack.MsgPackEventSerializer;
 import org.apache.kafka.clients.consumer.Consumer;
@@ -52,7 +53,7 @@ class KafkaInTransportTest {
 
     @Test
     @DisplayName("Should receive and deserialize event with JSON format")
-    void shouldReceiveAndDeserializeEventWithJsonFormat() throws Exception {
+    void shouldReceiveAndDeserializeEventWithJsonFormat() {
         ExecutorService executorService = Executors.newSingleThreadExecutor();
         TestEvent event = TestEvent.create("test-id", "test-message");
         JsonEventSerializer serializer = new JsonEventSerializer();
@@ -73,25 +74,24 @@ class KafkaInTransportTest {
         TestEventConsumer consumer = new TestEventConsumer();
 
         KafkaInTransport transport = new KafkaInTransport(
-                mockConsumer, List.of("test-topic"), executorService
+                mockConsumer, List.of("test-topic"), executorService, new EventSerializerFactory()
         );
 
         transport.start(consumer);
 
-        await().atMost(java.time.Duration.ofSeconds(5))
-                .until(() -> consumer.getEvents().size() > 0);
+        await().atMost(java.time.Duration.ofSeconds(5)).until(() -> !consumer.getEvents().isEmpty());
 
         transport.stop();
         executorService.shutdownNow();
 
         assertEquals(1, consumer.getEvents().size());
-        Event receivedEvent = consumer.getEvents().get(0);
+        Event receivedEvent = consumer.getEvents().getFirst();
         assertEquals(TestEvent.class, receivedEvent.type());
     }
 
     @Test
     @DisplayName("Should receive and deserialize event with MessagePack format")
-    void shouldReceiveAndDeserializeEventWithMsgPackFormat() throws Exception {
+    void shouldReceiveAndDeserializeEventWithMsgPackFormat() {
         ExecutorService executorService = Executors.newSingleThreadExecutor();
         TestEvent event = TestEvent.create("test-id", "test-message");
         MsgPackEventSerializer serializer = new MsgPackEventSerializer();
@@ -112,25 +112,24 @@ class KafkaInTransportTest {
         TestEventConsumer consumer = new TestEventConsumer();
 
         KafkaInTransport transport = new KafkaInTransport(
-                mockConsumer, List.of("test-topic"), executorService
+                mockConsumer, List.of("test-topic"), executorService, new EventSerializerFactory()
         );
 
         transport.start(consumer);
 
-        await().atMost(java.time.Duration.ofSeconds(5))
-                .until(() -> consumer.getEvents().size() > 0);
+        await().atMost(java.time.Duration.ofSeconds(5)).until(() -> !consumer.getEvents().isEmpty());
 
         transport.stop();
         executorService.shutdownNow();
 
         assertEquals(1, consumer.getEvents().size());
-        Event receivedEvent = consumer.getEvents().get(0);
+        Event receivedEvent = consumer.getEvents().getFirst();
         assertEquals(TestEvent.class, receivedEvent.type());
     }
 
     @Test
     @DisplayName("Should handle multiple events")
-    void shouldHandleMultipleEvents() throws Exception {
+    void shouldHandleMultipleEvents() {
         ExecutorService executorService = Executors.newSingleThreadExecutor();
 
         TestEvent event1 = TestEvent.create("id-1", "message-1");
@@ -155,7 +154,7 @@ class KafkaInTransportTest {
         TestEventConsumer consumer = new TestEventConsumer();
 
         KafkaInTransport transport = new KafkaInTransport(
-                mockConsumer, List.of("test-topic"), executorService
+                mockConsumer, List.of("test-topic"), executorService, new EventSerializerFactory()
         );
 
         transport.start(consumer);
@@ -171,7 +170,7 @@ class KafkaInTransportTest {
 
     @Test
     @DisplayName("Should handle old JSON format (backward compatibility)")
-    void shouldHandleOldJsonFormat() throws Exception {
+    void shouldHandleOldJsonFormat() {
         ExecutorService executorService = Executors.newSingleThreadExecutor();
 
         // Old format: JSON string as bytes without magic byte
@@ -193,13 +192,13 @@ class KafkaInTransportTest {
         TestEventConsumer consumer = new TestEventConsumer();
 
         KafkaInTransport transport = new KafkaInTransport(
-                mockConsumer, List.of("test-topic"), executorService
+                mockConsumer, List.of("test-topic"), executorService, new EventSerializerFactory()
         );
 
         transport.start(consumer);
 
         await().atMost(java.time.Duration.ofSeconds(5))
-                .until(() -> consumer.getEvents().size() > 0);
+                .until(() -> !consumer.getEvents().isEmpty());
 
         transport.stop();
         executorService.shutdownNow();
@@ -209,7 +208,7 @@ class KafkaInTransportTest {
 
     @Test
     @DisplayName("Should handle malformed event gracefully")
-    void shouldHandleMalformedEventGracefully() throws Exception {
+    void shouldHandleMalformedEventGracefully() {
         ExecutorService executorService = Executors.newSingleThreadExecutor();
 
         // Malformed JSON
@@ -227,7 +226,7 @@ class KafkaInTransportTest {
         TestEventConsumer consumer = new TestEventConsumer();
 
         KafkaInTransport transport = new KafkaInTransport(
-                mockConsumer, List.of("test-topic"), executorService
+                mockConsumer, List.of("test-topic"), executorService, new EventSerializerFactory()
         );
 
         transport.start(consumer);
