@@ -1,17 +1,12 @@
 package com.github.vovten.eventflow.autoconfig;
 
-import lombok.Data;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.Executor;
-import java.util.concurrent.LinkedBlockingQueue;
-import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.Executors;
 
 /**
  * Configuration properties for Event Flow auto-configuration.
@@ -59,6 +54,7 @@ import java.util.concurrent.atomic.AtomicInteger;
  *       max-size: 16
  *       queue-capacity: 100
  *       keep-alive-seconds: 60
+ *       concurrency-limit: 50
  *     transports:
  *       - name: local-queue
  *         capacity: 1000
@@ -71,7 +67,6 @@ import java.util.concurrent.atomic.AtomicInteger;
  * @author Vladimir Aleshkov
  * @since 2026-03-09
  */
-@Data
 @ConfigurationProperties(prefix = "event-flow")
 public class EventFlowProperties {
 
@@ -90,10 +85,33 @@ public class EventFlowProperties {
      */
     private DispatcherConfig dispatcher = new DispatcherConfig();
 
+    public boolean isEnabled() {
+        return enabled;
+    }
+
+    public void setEnabled(boolean enabled) {
+        this.enabled = enabled;
+    }
+
+    public PublisherConfig getPublisher() {
+        return publisher;
+    }
+
+    public void setPublisher(PublisherConfig publisher) {
+        this.publisher = publisher;
+    }
+
+    public DispatcherConfig getDispatcher() {
+        return dispatcher;
+    }
+
+    public void setDispatcher(DispatcherConfig dispatcher) {
+        this.dispatcher = dispatcher;
+    }
+
     /**
      * Publisher configuration settings.
      */
-    @Data
     public static class PublisherConfig {
         private boolean enabled = false;
         private boolean transactional = true;
@@ -101,23 +119,101 @@ public class EventFlowProperties {
         private RetryConfig retry = new RetryConfig();
         private AsyncConfig async = new AsyncConfig();
         private List<ChannelConfig> channels = new ArrayList<>();
+
+        public boolean isEnabled() {
+            return enabled;
+        }
+
+        public void setEnabled(boolean enabled) {
+            this.enabled = enabled;
+        }
+
+        public boolean isTransactional() {
+            return transactional;
+        }
+
+        public void setTransactional(boolean transactional) {
+            this.transactional = transactional;
+        }
+
+        public boolean isSilent() {
+            return silent;
+        }
+
+        public void setSilent(boolean silent) {
+            this.silent = silent;
+        }
+
+        public RetryConfig getRetry() {
+            return retry;
+        }
+
+        public void setRetry(RetryConfig retry) {
+            this.retry = retry;
+        }
+
+        public AsyncConfig getAsync() {
+            return async;
+        }
+
+        public void setAsync(AsyncConfig async) {
+            this.async = async;
+        }
+
+        public List<ChannelConfig> getChannels() {
+            return channels;
+        }
+
+        public void setChannels(List<ChannelConfig> channels) {
+            this.channels = channels;
+        }
     }
 
     /**
      * Retry configuration for event publishing.
      */
-    @Data
     public static class RetryConfig {
         private boolean enabled = false;
         private int maxAttempts = 3;
         private Duration initialDelay = Duration.ofMillis(100);
         private double multiplier = 2.0;
+
+        public boolean isEnabled() {
+            return enabled;
+        }
+
+        public void setEnabled(boolean enabled) {
+            this.enabled = enabled;
+        }
+
+        public int getMaxAttempts() {
+            return maxAttempts;
+        }
+
+        public void setMaxAttempts(int maxAttempts) {
+            this.maxAttempts = maxAttempts;
+        }
+
+        public Duration getInitialDelay() {
+            return initialDelay;
+        }
+
+        public void setInitialDelay(Duration initialDelay) {
+            this.initialDelay = initialDelay;
+        }
+
+        public double getMultiplier() {
+            return multiplier;
+        }
+
+        public void setMultiplier(double multiplier) {
+            this.multiplier = multiplier;
+        }
     }
 
     /**
      * Async publishing configuration.
      */
-    @Data
     public static class AsyncConfig {
         private boolean enabled = false;
         private int coreSize = 2;
@@ -126,47 +222,72 @@ public class EventFlowProperties {
         private int keepAliveSeconds = 60;
         private String threadNamePrefix = "event-flow-async-publisher";
 
+        public boolean isEnabled() {
+            return enabled;
+        }
+
+        public void setEnabled(boolean enabled) {
+            this.enabled = enabled;
+        }
+
+        public int getCoreSize() {
+            return coreSize;
+        }
+
+        public void setCoreSize(int coreSize) {
+            this.coreSize = coreSize;
+        }
+
+        public int getMaxSize() {
+            return maxSize;
+        }
+
+        public void setMaxSize(int maxSize) {
+            this.maxSize = maxSize;
+        }
+
+        public int getQueueCapacity() {
+            return queueCapacity;
+        }
+
+        public void setQueueCapacity(int queueCapacity) {
+            this.queueCapacity = queueCapacity;
+        }
+
+        public int getKeepAliveSeconds() {
+            return keepAliveSeconds;
+        }
+
+        public void setKeepAliveSeconds(int keepAliveSeconds) {
+            this.keepAliveSeconds = keepAliveSeconds;
+        }
+
+        public String getThreadNamePrefix() {
+            return threadNamePrefix;
+        }
+
+        public void setThreadNamePrefix(String threadNamePrefix) {
+            this.threadNamePrefix = threadNamePrefix;
+        }
+
         /**
          * Create an Executor based on this configuration.
+         * <p>
+         * Uses virtual threads by default for optimal I/O-bound performance.
+         * Falls back to platform thread pool if virtual threads are not available
+         * (Java < 21).
          *
          * @return configured executor
          */
         public Executor createExecutor() {
-            return new ThreadPoolExecutor(
-                    coreSize,
-                    maxSize,
-                    keepAliveSeconds,
-                    TimeUnit.SECONDS,
-                    new LinkedBlockingQueue<>(queueCapacity),
-                    new EventFlowThreadFactory(threadNamePrefix),
-                    new ThreadPoolExecutor.CallerRunsPolicy()
-            );
-        }
-    }
-
-    /**
-     * Thread factory for event-flow async executors.
-     */
-    private static class EventFlowThreadFactory implements ThreadFactory {
-        private final String namePrefix;
-        private final AtomicInteger threadNumber = new AtomicInteger(1);
-
-        EventFlowThreadFactory(String namePrefix) {
-            this.namePrefix = namePrefix;
-        }
-
-        @Override
-        public Thread newThread(Runnable r) {
-            Thread t = new Thread(r, namePrefix + threadNumber.getAndIncrement());
-            t.setDaemon(false);
-            return t;
+            // Use virtual threads by default (Java 21+)
+            return Executors.newVirtualThreadPerTaskExecutor();
         }
     }
 
     /**
      * Channel configuration for event publishing.
      */
-    @Data
     public static class ChannelConfig {
         private String name = "internal";
         /**
@@ -174,12 +295,27 @@ public class EventFlowProperties {
          * Transport name identifies the type (e.g., "local-queue", "kafka").
          */
         private List<TransportConfig> transports = new ArrayList<>();
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public List<TransportConfig> getTransports() {
+            return transports;
+        }
+
+        public void setTransports(List<TransportConfig> transports) {
+            this.transports = transports;
+        }
     }
 
     /**
      * Dispatcher configuration settings.
      */
-    @Data
     public static class DispatcherConfig {
         private boolean enabled = false;
         /**
@@ -190,35 +326,165 @@ public class EventFlowProperties {
         private List<TransportConfig> transports = new ArrayList<>();
         private IdempotentConfig idempotent = new IdempotentConfig();
         private DeserializationConfig deserialization = new DeserializationConfig();
+
+        public boolean isEnabled() {
+            return enabled;
+        }
+
+        public void setEnabled(boolean enabled) {
+            this.enabled = enabled;
+        }
+
+        public String getListenerPackages() {
+            return listenerPackages;
+        }
+
+        public void setListenerPackages(String listenerPackages) {
+            this.listenerPackages = listenerPackages;
+        }
+
+        public ThreadPoolConfig getThreadPool() {
+            return threadPool;
+        }
+
+        public void setThreadPool(ThreadPoolConfig threadPool) {
+            this.threadPool = threadPool;
+        }
+
+        public List<TransportConfig> getTransports() {
+            return transports;
+        }
+
+        public void setTransports(List<TransportConfig> transports) {
+            this.transports = transports;
+        }
+
+        public IdempotentConfig getIdempotent() {
+            return idempotent;
+        }
+
+        public void setIdempotent(IdempotentConfig idempotent) {
+            this.idempotent = idempotent;
+        }
+
+        public DeserializationConfig getDeserialization() {
+            return deserialization;
+        }
+
+        public void setDeserialization(DeserializationConfig deserialization) {
+            this.deserialization = deserialization;
+        }
     }
 
     /**
      * Idempotent configuration for dispatcher.
      */
-    @Data
     public static class IdempotentConfig {
         private boolean enabled = false;
         private Duration ttl = Duration.ofMinutes(10);
         private long maxSize = 10_000;
         private boolean warnOnDuplicate = true;
+
+        public boolean isEnabled() {
+            return enabled;
+        }
+
+        public void setEnabled(boolean enabled) {
+            this.enabled = enabled;
+        }
+
+        public Duration getTtl() {
+            return ttl;
+        }
+
+        public void setTtl(Duration ttl) {
+            this.ttl = ttl;
+        }
+
+        public long getMaxSize() {
+            return maxSize;
+        }
+
+        public void setMaxSize(long maxSize) {
+            this.maxSize = maxSize;
+        }
+
+        public boolean isWarnOnDuplicate() {
+            return warnOnDuplicate;
+        }
+
+        public void setWarnOnDuplicate(boolean warnOnDuplicate) {
+            this.warnOnDuplicate = warnOnDuplicate;
+        }
     }
 
     /**
      * Thread pool configuration for dispatcher.
      */
-    @Data
     public static class ThreadPoolConfig {
         private int coreSize = 4;
         private int maxSize = 16;
         private int queueCapacity = 100;
         private int keepAliveSeconds = 60;
+        /**
+         * Maximum number of concurrent handler executions.
+         * Provides backpressure when using virtual thread executors.
+         * When 0 (default), no limit is applied.
+         * <p>
+         * <b>Recommended values:</b>
+         * <ul>
+         *   <li>I/O-bound handlers (DB, HTTP): 20-100</li>
+         *   <li>CPU-bound handlers: number of CPU cores</li>
+         *   <li>Mixed workload: 50-200</li>
+         * </ul>
+         */
+        private int concurrencyLimit = 0;
+
+        public int getCoreSize() {
+            return coreSize;
+        }
+
+        public void setCoreSize(int coreSize) {
+            this.coreSize = coreSize;
+        }
+
+        public int getMaxSize() {
+            return maxSize;
+        }
+
+        public void setMaxSize(int maxSize) {
+            this.maxSize = maxSize;
+        }
+
+        public int getQueueCapacity() {
+            return queueCapacity;
+        }
+
+        public void setQueueCapacity(int queueCapacity) {
+            this.queueCapacity = queueCapacity;
+        }
+
+        public int getKeepAliveSeconds() {
+            return keepAliveSeconds;
+        }
+
+        public void setKeepAliveSeconds(int keepAliveSeconds) {
+            this.keepAliveSeconds = keepAliveSeconds;
+        }
+
+        public int getConcurrencyLimit() {
+            return concurrencyLimit;
+        }
+
+        public void setConcurrencyLimit(int concurrencyLimit) {
+            this.concurrencyLimit = concurrencyLimit;
+        }
     }
 
     /**
      * Transport configuration.
      * Name identifies the transport type (e.g., "local-queue", "kafka").
      */
-    @Data
     public static class TransportConfig {
         private String name = "local-queue";
         private int capacity = 1000;
@@ -230,12 +496,59 @@ public class EventFlowProperties {
          * Supported values: "json" (default), "msgpack"
          */
         private String serialization = "json";
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public int getCapacity() {
+            return capacity;
+        }
+
+        public void setCapacity(int capacity) {
+            this.capacity = capacity;
+        }
+
+        public String getTopic() {
+            return topic;
+        }
+
+        public void setTopic(String topic) {
+            this.topic = topic;
+        }
+
+        public String getServers() {
+            return servers;
+        }
+
+        public void setServers(String servers) {
+            this.servers = servers;
+        }
+
+        public String getConsumerGroup() {
+            return consumerGroup;
+        }
+
+        public void setConsumerGroup(String consumerGroup) {
+            this.consumerGroup = consumerGroup;
+        }
+
+        public String getSerialization() {
+            return serialization;
+        }
+
+        public void setSerialization(String serialization) {
+            this.serialization = serialization;
+        }
     }
 
     /**
      * Deserialization configuration for event security.
      */
-    @Data
     public static class DeserializationConfig {
         /**
          * List of allowed event packages for deserialization.
@@ -243,5 +556,13 @@ public class EventFlowProperties {
          * Default: com.github.vovten.eventflow
          */
         private List<String> allowedEventPackages = new ArrayList<>(List.of("com.github.vovten.eventflow"));
+
+        public List<String> getAllowedEventPackages() {
+            return allowedEventPackages;
+        }
+
+        public void setAllowedEventPackages(List<String> allowedEventPackages) {
+            this.allowedEventPackages = allowedEventPackages;
+        }
     }
 }
